Ajustes Finais, adicao menu

--- a/progamer/src/main/webapp/_template.xhtml
+++ b/progamer/src/main/webapp/_template.xhtml
@@ -22,9 +22,13 @@
 					icon="pi pi-fw pi-desktop">
 					<f:param name="i" value="1" />
 				</p:menuitem>
-				<p:menuitem value="Edit" outcome="form-user.xhtml"
+				<p:menuitem value="Edit" outcome="index.xhtml"
 					icon="pi pi-fw pi-user">
 					<f:param name="i" value="2" />
+				</p:menuitem>
+				<p:menuitem value="Register" outcome="form-user.xhtml"
+					icon="pi pi-fw pi-user">
+					<f:param name="i" value="3" />
 				</p:menuitem>
 				
 			</p:tabMenu> 
