--- a/progamer/src/main/webapp/_template.xhtml
+++ b/progamer/src/main/webapp/_template.xhtml
@@ -11,28 +11,32 @@
 	</h:head>
 	
 	<body>
-	
-	    <div class="card"> 
-			<p:tabMenu activeIndex="#{param.i}">
-				<p:menuitem value="Home" outcome="index.xhtml"
-					icon="pi pi-fw pi-home">
-					<f:param name="i" value="0" />
-				</p:menuitem>
-				<p:menuitem value="Setup" outcome="form-setup.xhtml"
-					icon="pi pi-fw pi-desktop">
-					<f:param name="i" value="1" />
-				</p:menuitem>
-				<p:menuitem value="Edit" outcome="index.xhtml"
-					icon="pi pi-fw pi-user">
-					<f:param name="i" value="2" />
-				</p:menuitem>
-				<p:menuitem value="Register" outcome="form-user.xhtml"
-					icon="pi pi-fw pi-user">
-					<f:param name="i" value="3" />
-				</p:menuitem>
-				
-			</p:tabMenu> 
-		</div>
+		<ui:insert name="menu">
+			<h:form>
+				<p:commandLink value="logout" action="#{userBean.logout}"/>
+			</h:form>
+		    <div class="card"> 
+				<p:tabMenu activeIndex="#{param.i}">
+					<p:menuitem value="Home" outcome="index.xhtml"
+						icon="pi pi-fw pi-home">
+						<f:param name="i" value="0" />
+					</p:menuitem>
+					<p:menuitem value="Setup" outcome="form-setup.xhtml"
+						icon="pi pi-fw pi-desktop">
+						<f:param name="i" value="1" />
+					</p:menuitem>
+					<p:menuitem value="Profile" outcome="index.xhtml"
+						icon="pi pi-fw pi-user">
+						<f:param name="i" value="2" />
+					</p:menuitem>
+					<p:menuitem value="Users" outcome="form-user.xhtml"
+						icon="pi pi-fw pi-user">
+						<f:param name="i" value="3" />
+					</p:menuitem>
+					
+				</p:tabMenu> 
+			</div>
+		</ui:insert>
 		
 		
 		
